src/test/resources/semantic_errors/while_string.notc
void main() {
    string s = "eh";
    while (s) {
    }
}
